--- a/main.html
+++ b/main.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Street Fighter: jQuery</title><link href='http://fonts.googleapis.com/css?family=Hammersmith+One' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Hammersmith+One' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
 	<script src="http://code.jquery.com/jquery.min.js"></script>
@@ -10,10 +11,16 @@
 </head>
 <body>
 	<div class="main">
-		<div class="ryu">
+			<div class="ryu">
 			<div class="ryu-still"></div>
 			<div class="ryu-ready"></div>
 			<div class="ryu-throwing"></div>
+			<div class="ryu-cool"></div>
+		</div>
+		<div class="instructions">
+			<div class="logo"><img src="images/sflogo.png"></div>
+			<p>Click on Ryu to make him throw a Hadouken.</p>
+			<p>Press and hold down the "x" key to make him strike a pose!</p>
 		</div>
 		<div class="hadouken"></div>
 	</div>
